--- a/apps/vanilla-ts-web-app/index.html
+++ b/apps/vanilla-ts-web-app/index.html
@@ -9,7 +9,8 @@
   <body>
     <script type="module" src="/src/main.ts"></script>
     <script type="module">
-      import { add, sub } from "./src/main";
+      import { add, sub } from "ts-lib";
+      // import { add, sub } from "./src/main";
 
       const addOutput = document.getElementById("addOutput");
       const subOutput = document.getElementById("subOutput");
